product-service - gke/clusterservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-clust-svc
spec:
  type: ClusterIP
  selector:
    app: gke-demo
  ports:
    - port: 80
      targetPort: 8001
