product-service - gke/gke-full.yaml
# -----------------------------
# 2️⃣ Deployment for Product Service
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gke-demo
  template:
    metadata:
      labels:
        app: gke-demo
    spec:
      containers:
        - name: app
          image: us-west1-docker.pkg.dev/active-valve-479215-b4/my-docker-art/gek-demo:v4
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
# -----------------------------
# 3️⃣ Service (LoadBalancer)
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: gke-demo-svc
spec:
  type: LoadBalancer
  selector:
    app: gke-demo
  ports:
    - port: 8001
      targetPort: 8001
