product-service - gke/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-demo-svc
spec:
  type: LoadBalancer
  selector:
    app: gke-demo
  ports:
    - port: 8001
      targetPort: 8001
